# MCHToolbox

./: .gitignore  README.md
FLP-control-scripts/: FLPs-check-link-status.sh  FLPs-default-settings.sh  FLPs-git-pull.sh  FLPs-reload-MCH-all-wco.sh  FLPs-reload-all-bad-links-wco.sh  FLPs-reload-all.sh  FLPs-reload-detection-elements-wco.sh  FLPs-reload-detection-elements.sh  FLPs-reload-links-wco.sh  FLPs-reload-links.sh  FLPs-reload-pedestals-ul.sh  FLPs-reload-pedestals.sh  FLPs-reload-physics.sh  FLPs-reload-solar-crates-wco.sh  FLPs-rename-data.sh  FLPs-run-command-parallel.sh  FLPs-run-command.sh  FLPs-set-bc-mode.sh  FLPs-set-clock-source.sh  FLPs-set-run-type.sh  FLPs-set-zs-offset.sh  FLPs-start-daq.sh  UpdateBadChannelsFromCCDB.sh  UpdateBadSolarBoardsFromCCDB.C  UpdateBadSolarBoardsFromCCDB.sh  UpdatePedestalsFromQCDB.C  UpdatePedestalsFromQCDB.sh  find-solar-crate.sh  flplist.txt  reload-detection-elements.sh  reload-solar-crate.sh  reload-solar-crates.sh
scripts/: check-ttc-pon.sh  cru-check-data.sh  cru-check-link-status.sh  cru-cleanup.sh  cru-config-all.sh  cru-config-frontend.sh  cru-config-gen.sh  cru-config-save.sh  cru-config-trigger-old.sh  cru-config-trigger.sh  cru-config.sh  cru-describe-link.sh  cru-ds-check-config.sh  cru-ds-config.sh  cru-ds-dump.sh  cru-fec-config.sh  cru-fec-reconfig-wco.sh  cru-fec-reconfig.sh  cru-fec-test.sh  cru-gbt-off.sh  cru-get-ds-enabled.sh  cru-get-links.sh  cru-get-patplayer.sh  cru-get-ul-build-date.sh  cru-init-env.sh  cru-link-status.sh  cru-powerup.sh  cru-process-pedestals.sh  cru-run-ctp-emulator.sh  cru-send-hard-reset.sh  cru-send-sync-reset.sh  cru-set-feeid.sh  cru-solar-clock-phase-save.sh  cru-solar-config.sh  cru-solar-fec-register-read.sh  cru-start-daq.sh  cru-ul-links-enable.sh  cru-ul-reset.sh  find-solar-id.sh  flp-check-data.sh  (+52 more)
scripts/GBT Clock Phases/: solar-clock-phase-0-0.txt  solar-clock-phase-0-1.txt  solar-clock-phase-0-10.txt  solar-clock-phase-0-11.txt  solar-clock-phase-0-12.txt  solar-clock-phase-0-13.txt  solar-clock-phase-0-14.txt  solar-clock-phase-0-15.txt  solar-clock-phase-0-16.txt  solar-clock-phase-0-17.txt  solar-clock-phase-0-18.txt  solar-clock-phase-0-19.txt  solar-clock-phase-0-2.txt  solar-clock-phase-0-20.txt  solar-clock-phase-0-21.txt  solar-clock-phase-0-22.txt  solar-clock-phase-0-23.txt  (+556 more)
tools/command-line/: CMakeLists.txt  rebuild.sh
tools/command-line/ALF/: CMakeLists.txt.bak
tools/command-line/ALF/include/Alf/: Common.h  Ic.h  Sca.h
tools/command-line/ALF/src/: Ic.cxx  Sca.cxx
tools/command-line/apps/: cru-decode-ul.cpp  cru-decode.cpp  ds-config.cpp  gbt-config.cpp
tools/command-line/src/Sca/: ds_fec.cpp  ds_fec.hpp  factory.hpp  fec_factory.hpp  fec_revision.cpp  gbt_sca.hpp  gbt_sca_i2c.cpp  gbt_sca_i2c.hpp  hdlc_alf.cpp  hdlc_alf.hpp  hdlc_core.cpp  hdlc_core.hpp  sampa.cpp  sampa.hpp
tools/command-line/src/Sca/cern/: cru.hpp  hdlc_cern_me.cpp  hdlc_cern_me.hpp
tools/command-line/src/Sca/gbt-hdlc/: hdlc.hpp
tools/command-line/src/decode/: decode.cpp  decode.hpp
(+72 files in other folders)
